# Rasterizer

./: .gitignore  CMakeLists.txt  test.cpp  tgabasic.cpp  tgabasic.h
include/: geometry.h  scene.h  tgabasic.h
src/: tgabasic.cpp  tgashapes.cpp
tests/: test_tgabasic.cpp
